--- a/Servers/Tomcat v9.0 Server at localhost-config/web.xml
+++ b/Servers/Tomcat v9.0 Server at localhost-config/web.xml
@@ -440,6 +440,8 @@
         <servlet-name>jsp</servlet-name>
         <url-pattern>*.jsp</url-pattern>
         <url-pattern>*.jspx</url-pattern>
+        <url-pattern>*.css</url-pattern>
+        <url-pattern>*.html</url-pattern>
     </servlet-mapping>
 
     <!-- The mapping for the SSI servlet -->
