--- a/Board01/.settings/org.eclipse.core.resources.prefs
+++ b/Board01/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/index.html=EUC-KR
 encoding//WebContent/js/idcheck.js=EUC-KR
 encoding//WebContent/js/idcheck_.js=EUC-KR
 encoding//WebContent/js/join.js=euc-kr
